--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -3,13 +3,13 @@
 <RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_notification_layout"
+    android:id="@+id/view_notification_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
 
-        android:id="@+id/view_notification_progress_layout"
+        android:id="@+id/view_notification_progress_relative_layout"
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_centerVertical="true"
@@ -257,7 +257,7 @@
 
         <TextView
 
-            android:id="@+id/view_notification_progress_text"
+            android:id="@+id/view_notification_progress_text_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -267,7 +267,7 @@
 
         <TextView
 
-            android:id="@+id/view_notification_progress_text_white"
+            android:id="@+id/view_notification_progress_text_white_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -281,16 +281,16 @@
 
         android:layout_width="wrap_content"
         android:layout_height="54dp"
-        android:layout_alignRight="@+id/view_notification_button"
+        android:layout_alignRight="@+id/view_notification_add_event_image_button"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
-        android:layout_toRightOf="@id/view_notification_progress_layout"
+        android:layout_toRightOf="@id/view_notification_progress_relative_layout"
         android:paddingRight="56dp"
         android:paddingTop="6dp">
 
         <TextView
 
-            android:id="@+id/view_notification_header"
+            android:id="@+id/view_notification_title_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -301,7 +301,7 @@
 
         <TextView
 
-            android:id="@+id/view_notification_header_black"
+            android:id="@+id/view_notification_title_black_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -312,7 +312,7 @@
 
         <TextView
 
-            android:id="@+id/view_notification_header_white"
+            android:id="@+id/view_notification_title_white_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -323,10 +323,10 @@
 
         <TextView
 
-            android:id="@+id/view_notification_text"
+            android:id="@+id/view_notification_subtitle_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_notification_header"
+            android:layout_below="@id/view_notification_title_text_view"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="#616161"
@@ -335,10 +335,10 @@
 
         <TextView
 
-            android:id="@+id/view_notification_text_black"
+            android:id="@+id/view_notification_subtitle_black_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_notification_header_black"
+            android:layout_below="@id/view_notification_title_black_text_view"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="#000000"
@@ -347,10 +347,10 @@
 
         <TextView
 
-            android:id="@+id/view_notification_text_white"
+            android:id="@+id/view_notification_subtitle_white_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/view_notification_header_white"
+            android:layout_below="@id/view_notification_title_white_text_view"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="#d0ffffff"
@@ -361,7 +361,7 @@
 
     <ImageButton
 
-        android:id="@+id/view_notification_button"
+        android:id="@+id/view_notification_add_event_image_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_alignParentRight="true"
@@ -369,6 +369,6 @@
         android:layout_marginRight="8dp"
         android:background="#00000000"
         android:clickable="true"
-        android:src="@drawable/homework" />
+        android:src="@drawable/event" />
 
 </RelativeLayout>
