--- a/app/src/main/res/layout/activity_edit_day.xml
+++ b/app/src/main/res/layout/activity_edit_day.xml
@@ -10,7 +10,7 @@
     <include
 
         android:id="@+id/edit_day_toolbar"
-        layout="@layout/view_toolbar" />
+        layout="@layout/view_toolbar_padded" />
 
     <FrameLayout
 
@@ -56,16 +56,6 @@
             </LinearLayout>
 
         </ScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-
-            android:id="@+id/edit_day_floating_action_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:src="@drawable/copy"
-            android:visibility="invisible" />
 
     </FrameLayout>
 
