--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout
 
-        android:id="@+id/fragment_classes_no_classes_relative_layout"
+        android:id="@+id/fragment_day_no_classes_relative_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -29,20 +29,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text=" No events."
+            android:text=" No classes."
             android:textColor="@color/white"
             android:textSize="22sp" />
 
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <ScrollView
 
-        android:id="@+id/fragment_classes_recycler_view"
+        android:id="@+id/fragment_day_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:nestedScrollingEnabled="false"
-        android:paddingBottom="84dp"
-        android:paddingTop="12dp" />
+        android:scrollbars="none">
+
+        <android.support.v7.widget.CardView
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
+
+            <ListView
+
+                android:id="@+id/fragment_day_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
+                android:childDivider="#d3d3d3"
+                android:dividerHeight="1dp">
+
+            </ListView>
+
+        </android.support.v7.widget.CardView>
+
+    </ScrollView>
 
 </RelativeLayout>
