--- a/app/src/main/res/menu/toolbar_copy.xml
+++ b/app/src/main/res/menu/toolbar_copy.xml
@@ -7,10 +7,11 @@
 
     <item
 
-        android:id="@+id/toolbar_check_check_item"
-        android:icon="@drawable/check"
+        android:id="@+id/toolbar_copy_copy_item"
+        android:icon="@drawable/copy"
         android:orderInCategory="1"
-        android:title="Done"
+        android:title="Copy"
+        android:visible="false"
         app:showAsAction="always" />
 
 </menu>
