--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -75,6 +75,39 @@
 
     <PreferenceCategory
 
+        android:title="Timetable">
+
+        <com.afollestad.materialdialogs.prefs.MaterialListPreference
+
+            android:defaultValue="1"
+            android:entries="@array/days_of_week"
+            android:entryValues="@array/days_of_week_values"
+            android:key="first_day_of_week"
+            android:negativeButtonText=""
+            android:summary="Choose the first working day of your week"
+            android:title="First day of week" />
+
+        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
+
+            android:defaultValue="08:00"
+            android:hint="HH:mm"
+            android:key="first_lesson_time"
+            android:maxLines="1"
+            android:summary="Enter when your day starts in the format HH:mm"
+            android:title="First lesson time" />
+
+        <EditTextPreference
+
+            android:defaultValue="60"
+            android:key="default_lesson_length"
+            android:numeric="integer"
+            android:summary="Choose how long a lesson is by default in minutes"
+            android:title="Default lesson length" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+
         android:title="Notifications">
 
         <SwitchPreference
@@ -100,47 +133,23 @@
             android:summary="Set the class color as the notification background"
             android:title="Flip notification colors" />
 
+        <SwitchPreference
+
+            android:defaultValue="true"
+            android:key="next_class_notification"
+            android:summary="Show a notification for the next class"
+            android:title="Next class notification" />
+
         <com.afollestad.materialdialogs.prefs.MaterialListPreference
 
             android:defaultValue="60"
+            android:dependency="next_class_notification"
             android:entries="@array/next_class_notification_minutes_text"
             android:entryValues="@array/next_class_notification_minutes_values"
             android:key="next_class_notification_minutes"
             android:negativeButtonText=""
             android:summary="Choose when a notification for the next class appears"
             android:title="Next class notification timing" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-
-        android:title="Timetable">
-
-        <com.afollestad.materialdialogs.prefs.MaterialListPreference
-
-            android:defaultValue="1"
-            android:entries="@array/days_of_week"
-            android:entryValues="@array/days_of_week_values"
-            android:key="first_day_of_week"
-            android:negativeButtonText=""
-            android:summary="Choose the first working day of your week"
-            android:title="First day of week" />
-
-        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
-
-            android:defaultValue="08:00"
-            android:hint="HH:mm"
-            android:key="first_lesson_time"
-            android:summary="Enter when your day starts in the format HH:mm"
-            android:title="First lesson time" />
-
-        <EditTextPreference
-
-            android:defaultValue="60"
-            android:key="default_lesson_length"
-            android:numeric="integer"
-            android:summary="Choose how long a lesson is by default"
-            android:title="Default lesson length" />
 
     </PreferenceCategory>
 
